# wayfinder-paths-sdk

./: .gitignore  .mcp.json  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONFIG_GUIDE.md  README.md  RUNNER_ARCHITECTURE.md  SIMULATION.md  TESTING.md  Terms.md  config.example.json  justfile  pyproject.toml  requirements.txt
.claude/: settings.json
.claude/docs/: architecture.md  execution-modes.md
.claude/hooks/: wayfinder_adapter_execute_review.py  wayfinder_execute_review.py  (+12 more)
.github/: strategies-verify.yml
.opencode/: package.json
.wayfinder_runs/: README.md
examples/: paladin_trust_demo.py
scripts/: aave_v3_smoke_test.py  active_perps_strategy_recon.py  aerodrome_best_emissions_deploy.py  aerodrome_best_vote_pools.py  aerodrome_smoke.py  aerodrome_user_state.py  async_vault_queue_gorlami.py  base_prompt_vault_pools_gorlami.py  brap_swap.py  create_adapter.py  create_strategy.py  eval_job_worker_cache.py  eval_jobs_judge.md  eval_judge.sh  eval_polymarket_relevance.py  eval_sports_ab.sh  eval_sports_ab_judge.md  eval_station.py  eval_wayfinder_jobs.py  make_wallets.py  mock_rpc_429.py  moonwell_dry_run.py  morpho_smoke_test.py  polymarket_roundtrip_v2.py  polymarket_smoketest.py  promote_wayfinder_script.py  publish_to_pypi.sh  pull-sdk-ref.sh  remote_setup_stage1.py  remote_setup_stage2.py  remote_setup_utils.py  setup.py  slipstream_analyze_range.py  slipstream_enter_position.py  sports_canonical_live_smoke.py
wayfinder_mcp_rs/: Cargo.toml  README.md
wayfinder_mcp_rs/src/: main.rs
wayfinder_paths/: __init__.py  conftest.py  run_strategy.py  runnerd.py
(+923 files in other folders)
