[package]
name = "wayfinder-mcp"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "wayfinder-mcp"
path = "src/main.rs"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tower-http = { version = "0.5", features = ["trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
thiserror = "1"
uuid = { version = "1", features = ["v4"] }
clap = { version = "4", features = ["derive"] }
dashmap = "6"

[profile.release]
lto = "thin"
strip = true
codegen-units = 1
