[package]
name = "wayfinder-mcp"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "wayfinder-mcp"
path = "src/main.rs"

[dependencies]
rmcp = { version = "1.5", features = ["server", "transport-streamable-http-server", "macros"] }
axum = "0.7"
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7"
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
uuid = { version = "1", features = ["v4"] }
clap = { version = "4", features = ["derive"] }
dashmap = "6"

[profile.release]
lto = "thin"
strip = true
codegen-units = 1
